# AntojitosSantaLucia

./: Guia-Compilacion-Windows.txt  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: publicar.yml
SQL/: 20260304.sql  20260315.sql  db_antojitos.db
proyectooriginal/AntojitosSantaLucia/: composer.json  guia_banner_pago.md  index.php  manifest.json  schema_check.php  structure.sql  sync.php
proyectooriginal/AntojitosSantaLucia/api/: get_corp_estatus.php
proyectooriginal/AntojitosSantaLucia/config/: conexion.php
proyectooriginal/AntojitosSantaLucia/controller/: caja.php  categoria.php  cierre_caja.php  controller_comanda.php  controller_dashboard.php  controller_display.php  controller_salida.php  devoluciones.php  empleados_controller.php  gastos_fijos.php  gastos_operativos.php  generar_pdf.php  imprimir_corte_preventivo.php  insumos.php  inventario.php  productos.php  reimprimir_ticket.php  reportes.php  reportes_api.php  test_log.php  token.php  usuario.php  ventas.backup.php  ventas.php
proyectooriginal/AntojitosSantaLucia/css/: cierre_caja.css  gastos_operativos.css  gastos_operativos_movil.css  productos.css  styles.css_backup.css
proyectooriginal/AntojitosSantaLucia/includes/: auth_check.php  (+5 more)
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/db/: database.js
src/pages/: caja.js  cierre_caja.js  comanda.js  dashboard.js  devoluciones.js  empleados.js  layout.js  login.js  productos.js  reportes.js  salidas_efectivo.js  sincronizacion.js  token.js
(+80 files in other folders)
