[package]
name = "app"
version = "0.3.4"
description = "Antojitos Santa Lucía - POS Desktop"
authors = ["Luis Siller"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
